* Fri Mar 14 2008 Jesse Keating <jkeating@redhat.com>
- Don't pass --prodpath to buildinstall.  It won't like it.
- Fix source iso making

* Wed Mar 12 2008 Jesse Keating <jkeating@redhat.com>
- Lower the CD size to 650; need to investigate pkgordering soon

* Tue Mar 11 2008 Jesse Keating <jkeating@redhat.com>
- netinst.iso was renamed to boot.iso.  We want to link it
  to the iso dir, but keep the netinst.iso name for now.

* Wed Mar 05 2008 Jesse Keating <jkeating@redhat.com>
- Fix ppc split iso generation
- Exclude repoview from isos

* Mon Mar 03 2008 Jesse Keating <jkeating@redhat.com>
- Copy the netinst iso over to the isos/ directory
- Require a new enough anaconda for this

* Thu Feb 28 2008 Jesse Keating <jkeating@redhat.com>
- Make sure we get fresh repomd.xml each time we run
- Don't autoclean the repodata, some of it can be reused
- Clear out the repodata we copy out temporarily, so that we don't
  traceback on --force runs.

* Thu Feb 21 2008 Jesse Keating <jkeating@redhat.com>
- Handle gzipped comps files.

* Fri Feb 08 2008 Jesse Keating <jkeating@redhat.com>
- Fix comps mashup to be more lenient with the open/close of <comps

* Mon Jan 21 2008 Jesse Keating <jkeating@redhat.com>
- Use createrepo api instead of execing it from the cli
- Create different repodata for the unified media, as anaconda no longer
  deals with "ALL" or "1,2,3,4" correctly.  Simplify anaconda by just
  using normal metadata.  Re-factor some things to handle this right.

* Mon Dec 17 Jesse Keating <jkeating@redhat.com>
- Always add the core comps group.

* Mon Dec 10 Jesse Keating <jkeating@redhat.com>
- Use a repoview cache.
- Change path to isomd5sum

* Sat Dec 08 Jesse Keating <jkeating@redhat.com>
- Use a createrepo cache.

* Tue Dec 04 Jesse Keating <jkeating@redhat.com>
- Make logged output reusable in shell
- Default to 670 for a CD size, so that we don't overflow
- More fixes around re-using an existing tree

* Mon Dec 03 Jesse Keating <jkeating@redhat.com>